tests/functional2/lang/builtins.flakeRefToString/eval-fail-negative-integer.err.exp
error:
       … while calling the 'flakeRefToString' builtin
         at /pwd/in.nix:4:1:
            3| in
            4| builtins.flakeRefToString {
             | ^
            5|   type  = "github";

       error: negative value given for flake ref attr repo: -1
